--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -3,4 +3,4 @@ project(core)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(core main.cpp GDB_MI_Interactor.cpp GDB_MI_Interactor.h target.cpp)
+add_executable(core main.cpp GDB_MI_Interactor.cpp GDB_MI_Interactor.h target.cpp AbstractGDBMIParser.h PyGDBMIParser.cpp PyGDBMIParser.cpp PyGDBMIParser.h)
