--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ configure_file(graph graph COPYONLY)
 file(COPY pygdbmi
               DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
 
-add_executable(core json.hpp main.cpp src/GDB_Translator/PyGDBMIParser.cpp src/GDB_Translator/PyGDBMIParser.cpp src/GDB_Translator/PyGDBMIParser.h src/GDB_Translator/Abstract_GDB_MI_Translator.h
+add_executable(core json.hpp main.cpp src/GDB_Translator/PyGDBMIParser.cpp src/GDB_Translator/PyGDBMIParser.cpp src/GDB_Translator/PyGDBMIParser.h
         src/GDB_Translator/Abstract_GDB_MI_Output_Parser.h src/GDB_Translator/GDB_MI_Translator.cpp src/GDB_Translator/GDB_MI_Translator.h src/Console_Interface/ArgumentParser.cpp src/Console_Interface/ArgumentParser.h
         src/Console_Interface/ConsoleInterface.cpp src/Console_Interface/ConsoleInterface.h src/Graph_Debugger/Graph_Debugger.h src/Graph_Debugger/Graph_Debugger.cpp)
 
